--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,34 @@
-.dart_tool/
-.packages
-build/
-pubspec.lock
-doc/api/
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+native/
 test/.test_coverage.dart
+coverage/
+coverage_badge.svg
+
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# Visual Studio Code related
+.vscode/
+
+# Flutter/Dart/Pub related
+**/doc/api/
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+build/
+.dart_tool/package_config.json
